--- a/views/main.html
+++ b/views/main.html
@@ -25,11 +25,13 @@
   
 
   {% endfor %}
-  
+  <tr>
+    <td colspan="5"></td>
+    <td id="my_total">$0</td>
+    <td id="my_bought">$0</td>
+    <td id="my_profit">$0</td>
+  </tr>
 </table>
 
-<div id="my_profit">
-  0$
-</div>
 {% endblock %}
 
