--- a/views/base.html
+++ b/views/base.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>BTC/ETH/LTC</title>
+		<link rel="icon" type="image/png" href="/rhcp_favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 		<link rel="stylesheet" href="/static/css/main.css" type="text/css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
