--- a/views/main.html
+++ b/views/main.html
@@ -6,6 +6,7 @@
     <th>Price</th>
     <th>1h trend</th>
     <th>24h trend</th>
+    <th>7d trend</th>
     <th>Amt Owned</th>
     <th>BTC</th>
     <th>Bought @ (BTC)</th>
@@ -19,6 +20,7 @@
     <td class="price">$0</td>
     <td class="1h">0%</td>
     <td class="24h">0%</td>
+    <td class="7d">0%</td>
     <td class="owned">{{row.amt}}</td>
     <td class="profit">$0</td>
     <td class="bought">$0</td>
