--- a/views/main.html
+++ b/views/main.html
@@ -47,7 +47,7 @@
 <script>
   coins.push("{{coin.id}}");
   owned["{{coin.id}}"] = {{coin.amt}};
-  //bought["{{coin.id}}"] = {{coin.bought}}.toFixed(8);
+  bought["{{coin.id}}"] = {{coin.bought}}.toFixed(8);
 </script>
 {% endfor %}
 <script src="/static/js/main.js"></script>
