--- a/views/main.html
+++ b/views/main.html
@@ -9,8 +9,8 @@
     <th>24h trend</th>
     <th>7d trend</th>
     <th>Amt Owned</th>
-    <th>BTC</th>
-    <th>Bought @ (BTC)</th>
+    <th>ETH</th>
+    <th>Bought @ (ETH)</th>
     <th>USD</th>
     <th>Bought @ (USD)</th>
     <th>Profit</th>
